# AutoExcerpter

./: .gitignore  README.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v3.0.md  RELEASE_NOTES_v4.0.md  config.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/: __init__.py  base_llm_client.py  base_openai_client.py  llm_client.py  model_capabilities.py  openai_api.py  openai_transcribe_api.py  rate_limiter.py  saia_api.py  summary_api.py  transcribe_api.py
api/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py  openrouter_provider.py
cli/: __init__.py  args.py  argument_parser.py  display.py  errors.py  interaction.py  loop.py  processing.py
config/: __init__.py  accessors.py  app.py  constants.py  loader.py  logger.py  state.py  types.py
config/defaults/: api_keys.example.yaml  api_keys.yaml  app.example.yaml  app.yaml  concurrency.example.yaml  concurrency.yaml  image_processing.example.yaml  model.example.yaml  model.yaml
core/: __init__.py  page_numbering.py  resume.py  transcriber.py
imaging/: __init__.py  _provider.py  payload.py  pdf.py  preprocessing.py
llm/: __init__.py  base.py  capabilities.py  client.py  prompts.py  rate_limit.py  summary.py  token_tracker.py  transcription.py  types.py
llm/resources/prompts/: summary_plain_text_prompt.txt  summary_system_prompt.txt  transcription_plain_text_prompt.txt  transcription_system_prompt.txt
llm/resources/schemas/: summary_schema.json  transcription_schema.json
modules/: __init__.py  app_config.py  concurrency_helper.py  config_loader.py  constants.py  context_resolver.py  error_handler.py  image_utils.py  item_scanner.py  logger.py  model_utils.py  path_utils.py  prompt_utils.py  roman_numerals.py  task_runner.py  text_cleaner.py  token_tracker.py  types.py  user_prompts.py
modules/config/: __init__.py  app.yaml  concurrency.yaml  image_processing.yaml  model.yaml
modules/prompts/: summary_system_prompt.txt  system_prompt.txt  transcription_system_prompt.txt
modules/schemas/: summary_schema.json  transcription_schema.json
pipeline/: __init__.py  context.py  log.py  page_numbering.py  paths.py  resume.py  scanner.py  text_cleaner.py  transcriber.py  types.py
processors/: __init__.py  citation_manager.py  docx_writer.py  file_manager.py  log_manager.py  markdown_writer.py  pdf_processor.py
rendering/: __init__.py  citations.py  docx.py  markdown.py  summary.py  text.py
scripts/: __init__.py
scripts/repair_layout/: __init__.py  repair.py  run_repair.py  verifier.py
tests/: __init__.py  conftest.py  test_app_config_extended.py  test_argument_parser.py  test_base_llm_client.py  test_base_llm_client_extended.py  test_citation_manager.py  test_cli_args.py  test_cli_errors.py  test_cli_interaction.py  test_concurrency_helper.py  test_concurrency_helper_extended.py  test_config_loader.py  test_config_logger.py  test_constants.py  test_context_resolver.py  test_error_handler.py  test_file_manager.py  test_file_manager_extended.py  test_hardening_regressions.py  test_hardening_round2_citations.py  test_hardening_round2_llm.py  test_hardening_round2_pipeline.py  test_hardening_round2_state.py  test_image_size_detail.py  test_image_utils.py  test_imaging_payload.py  test_imaging_pdf.py  test_imaging_pdf_extended.py  test_imaging_preprocessing.py  test_imaging_provider.py  test_item_scanner.py  test_llm_client.py  test_llm_close.py  test_llm_prompts.py  test_llm_token_tracker.py  test_llm_token_tracker_extended.py  test_logger_extended.py  test_model_capabilities.py  test_model_utils.py  (+43 more)
utils/: image_processor.py  rate_limiter.py
