[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoexcerpter"
version = "1.0.1"
description = "Document processing pipeline that transcribes and summarizes PDFs and image collections using vision-enabled LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF>=1.26",
    "Pillow>=12.2",
    "tqdm>=4.67",
    "PyYAML>=6.0",
    "langchain-core>=1.2",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.4",
    "langchain-google-genai>=4.2",
    "requests>=2.32",
    "python-docx>=1.2",
    "mathml2omml>=0.0.2",
    "latex2mathml>=3.80",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.20",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
    "pytest>=9.0",
    "pytest-mock>=3.15",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "api: marks tests that require API access",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "config",
    "context",
    "imaging",
    "llm",
    "pipeline",
    "rendering",
]
