[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoexcerpter"
version = "2.2.0"
description = "Document processing pipeline that transcribes and summarizes PDFs and image collections using vision-enabled LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF>=1.26",
    "Pillow>=12.2",
    "tqdm>=4.68",
    "PyYAML>=6.0",
    "langchain-core>=1.4",
    "langchain-openai>=1.3",
    "langchain-anthropic>=1.4",
    "langchain-google-genai>=4.2",
    "requests>=2.34",
    "python-docx>=1.2",
    "mathml2omml>=0.0.2",
    "latex2mathml>=3.80",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1",
    "ruff>=0.15",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
    "pytest>=9.1",
    "pytest-mock>=3.15",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "api: marks tests that require API access",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.hatch.build.targets.wheel]
packages = [
    "cli",
    "config",
    "context",
    "imaging",
    "llm",
    "pipeline",
    "rendering",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
extend-exclude = ["data/", "outputs/", "scratch", ".claude", "backup", "deprecated", "exploratory", "explorative", "extras"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["UP047"]

[tool.ruff.lint.per-file-ignores]
"cli/interaction.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false

[tool.deptry]
# Treat the dev extra as development dependencies (pytest, mypy, ruff, and the
# type stubs are not imported in the shipped source tree).
pep621_dev_dependency_groups = ["dev"]
# tests/ carries analysis-only imports that are intentionally undeclared.
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
# colorama is an optional, guarded import (graceful fallback when absent) and is
# intentionally not a hard runtime dependency.
DEP003 = ["colorama"]

[tool.deptry.package_module_name_map]
# Distributions whose import name differs from the package name; declaring these
# keeps scans accurate even when deptry runs outside the project venv.
PyYAML = ["yaml"]
PyMuPDF = ["fitz"]
Pillow = ["PIL"]
python-docx = ["docx"]
